--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,8 +17,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-    - name: Move right folder
-      run: cd viikko3/WebLogin
+        
+    #- name: Move right folder
+    #  run: cd viikko3/WebLogin
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
