--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         java-version: 1.11
         
-    #- name: Move right folder
-    #  run: cd viikko3/WebLogin
+    - name: Move to right folder
+      run: cd viikko3/WebLogin/
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
