--- a/.github/workflows/viikko3.yml
+++ b/.github/workflows/viikko3.yml
@@ -6,6 +6,27 @@ on:
     - 'viikko3/**'
     
 jobs:
+  HelloCucumber:
+  
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./viikko3/HelloCucumber/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
+      
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    - name: Test with Gradle
+      run: ./gradlew test   
+
   LoginCucumber:
   
     runs-on: ubuntu-latest
@@ -47,3 +68,5 @@ jobs:
       
     - name: Test with Gradle
       run: ./gradlew test    
+
+
