--- a/.github/workflows/viikko3.yml
+++ b/.github/workflows/viikko3.yml
@@ -6,6 +6,27 @@ on:
     - 'viikko3/**'
     
 jobs:
+  nhlreader:
+  
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./viikko3/nhlreader/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
+      
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    - name: Test with Gradle
+      run: ./gradlew test  
+      
   HelloCucumber:
   
     runs-on: ubuntu-latest
